attempt to fix safari navbar alignment bug

--- a/src/css/NavigationBar.css
+++ b/src/css/NavigationBar.css
@@ -5,6 +5,8 @@
     /* grid-template-columns: repeat(5, 15vw); */
     grid-template-rows: 20px fit-content(100%) 20px;
     justify-self: center;
+    margin: 0px;
+    left: auto;
     padding-top: 20px;
     z-index: 20;
     overflow: hidden;
